--- a/app/partials/admin/infringe.html
+++ b/app/partials/admin/infringe.html
@@ -21,14 +21,14 @@
           <div>
               <label>I举报人信息</label>
               <div class="row-fluid">
-                  <div class="span6">
+                  <div class="col-md-6">
                       <label>姓</label>    {{infringe.informer.xing}}
                       <label>公司</label>    {{infringe.informer.company}}
                       <label>街</label>    {{infringe.informer.street}}
                       <label>邮编</label>    {{infringe.informer.postalCode}}
                       <label>手机</label>    {{infringe.informer.mobile}}
                   </div>
-                  <div class="span6">
+                  <div class="col-md-6">
                       <label>名</label>    {{infringe.informer.ming}}
                       <label>版权拥有者</label>    {{infringe.informer.rightsHolder}}
                       <label>城市</label>    {{infringe.informer.city}}
