--- a/app/partials/adminHome.html
+++ b/app/partials/adminHome.html
@@ -2,11 +2,11 @@
 
 <div class="container" style="padding-top:65px">
     <div class="row-fluid">
-        <div class="span2">
+        <div class="col-md-2">
             <ng-include src="'partials/admin/nav.html'"></ng-include>
         </div>
 
-        <div class="span9">
+        <div class="col-md-9">
             <ng-include src="innerPage"></ng-include>
         </div>
 
