--- a/app/partials/forbidden.html
+++ b/app/partials/forbidden.html
@@ -1,9 +1,9 @@
 <ng-include src="'partials/guest/header.html'"></ng-include>
 
-<div class="row-fluid">
-    <div class="span4"></div>
-    <div class="span8" style="padding-top: 5%">
-        <img id="poster_img" ng-src="img/403.jpg" style="height: 500px">
+<div class="row">
+    <div class="col-md-4"></div>
+    <div class="col-md-8" style="padding-top: 5%">
+        <img id="poster_img" ng-src="img/403.jpg" class="img-responsive">
     </div>
-    <div  class="span2"></div>
+    <div  class="col-md-2"></div>
 </div>
