--- a/app/partials/guest/forgetPass.html
+++ b/app/partials/guest/forgetPass.html
@@ -6,33 +6,39 @@
     </div>
     <div ng-show="show">
         <form name="the_form" class="form-horizontal">
-            <div class="control-group">
+            <div class="form-group">
                     <h4>
                         请输入您的注册邮箱，我们将发送重置密码链接邮件到您的注册邮箱，您可以通过该链接修改密码。
                     </h4>
             </div>
-            <div class="control-group">
-                <label class="control-label" for="inputAlias">您的邮箱</label>
-                <div class="controls">
-                    <div class="text-warning"
-                         ng-show="the_form.email.$dirty && the_form.email.$invalid">
-                        <small class="text-warning"
-                               ng-show="the_form.email.$error.required">
-                            邮箱地址不能为空
-                        </small>
-                        <small class="text-warning"
-                               ng-show="the_form.email.$error.email">
-                            请输入合理的邮箱地址
-                        </small>
+            <div class="row">
+                <div class="col-md-1 hidden-xs"></div>
+                <div class="col-md-3 col-xs-12">
+                    <div class="form-group">
+                        <label class="control-label" for="inputAlias">您的邮箱</label>
+                        <div class="controls">
+                            <div class="text-warning"
+                                 ng-show="the_form.email.$dirty && the_form.email.$invalid">
+                                <small class="text-warning"
+                                       ng-show="the_form.email.$error.required">
+                                    邮箱地址不能为空
+                                </small>
+                                <small class="text-warning"
+                                       ng-show="the_form.email.$error.email">
+                                    请输入合理的邮箱地址
+                                </small>
+                            </div>
+                            <input type="email" name="email" id="inputAlias" class="form-control" placeholder="邮箱" ng-model="emailAddress" required>
+                        </div>
                     </div>
-                    <input type="email" name="email" id="inputAlias" placeholder="邮箱" ng-model="emailAddress" required>
+                    <div class="form-group">
+                        <div class="controls">
+                            <button type="submit" ng-disabled="the_form.$invalid"  class="btn btn-default form-control" ng-click="toSubmit()">提交</button>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="control-group">
-                <div class="controls">
-                    <button type="submit" ng-disabled="the_form.$invalid"  class="btn" ng-click="toSubmit()">提交</button>
-                </div>
-            </div>
+                <div class="col-md-8 hidden-xs"></div>
+             </div>
         </form>
     </div>
 
