--- a/app/partials/infringement.html
+++ b/app/partials/infringement.html
@@ -44,8 +44,8 @@
         <div style="padding-bottom: 20px">
             <b>请填写真实的个人信息</b><br>
 
-            <div class="row-fluid" style="padding-bottom: 10px">
-                <div class="span3">
+            <div class="row" style="padding-bottom: 10px">
+                <div class="col-md-3">
                     <label>姓<span style="color: red">*</span></label> <input ng-model="infringe.informer.xing" required>
                     <label>公司</label> <input ng-model="infringe.informer.company">
                     <label>地址<span style="color: red">*</span></label> <input ng-model="infringe.informer.street"
@@ -56,7 +56,7 @@
                                                                        tooltip="请确保我们能联系您了解更多细节"  tooltip-trigger="click" >
                     <label>固定电话</label> <input ng-model="infringe.informer.phone">
                 </div>
-                <div class="span3">
+                <div class="col-md-3">
                     <label>名<span style="color: red">*</span></label> <input ng-model="infringe.informer.ming" required>
                     <label>版权拥有者</label> <input ng-model="infringe.informer.rightsHolder"
                                                                             tooltip="如果您是代理人，请填写真实的所有者"  tooltip-trigger="click" >
