--- a/app/partials/interest.html
+++ b/app/partials/interest.html
@@ -6,15 +6,15 @@
 
 <div class="container">
     <div id="tags">
-        <div class="row-fluid">
-            <div class="span6">
+        <div class="row">
+            <div class="col-md-6">
                 <div ng-repeat="cate in categories | filter:odd">
                     <div style="padding-top: 30px;">
                         <legend>{{cate.name}}</legend>
-                        <div style="padding-top: 15px;">
+                        <div>
                             <ul class="tags">
                                 <li ng-repeat="curatedTag in curatedTags | filter:{category.name: cate.name}"
-                                     style="float:left;padding-right: 25px;padding-bottom: 10px;">
+                                     style="padding-right: 25px;padding-bottom: 30px;float: left">
                                     <a  onclick="return false;" ng-click="toogleInterest()" style="background: {{curatedTag.class}};cursor:pointer;">
                                        <span > {{curatedTag.label}} </span>
                                     </a>
@@ -26,14 +26,14 @@
                 </div>
             </div>
 
-            <div class="span6">
+            <div class="col-md-6">
                 <div ng-repeat="cate in categories | filter:even">
                     <div style="padding-top: 30px;">
                         <legend>{{cate.name}}</legend>
-                        <div style="padding-top: 15px;">
+                        <div>
                             <ul class="tags">
                                 <li ng-repeat="curatedTag in curatedTags | filter:{category.name: cate.name}"
-                                    style="float:left;padding-right: 25px;padding-bottom: 10px;">
+                                    style="padding-right: 25px;padding-bottom: 30px;float: left">
                                     <a onclick="return false;" ng-click="toogleInterest()" style="background: {{curatedTag.class}};cursor:pointer;">
                                           <span > {{curatedTag.label}} </span>
                                     </a>
@@ -52,13 +52,14 @@
     </div>
 
     <div id="recommand" style="padding-top: 30px">
-        <legend>推荐用户</legend>
-        <div ng-if="recommendUsers.length > 0" style="padding-left: 60px">
-            <div ng-repeat="recommendUser in recommendUsers" style="float:left;padding-left: 10px" ng-click="toogleFollow()">
-                <div style="text-align:center;padding-right: 20px">
+        <legend>推荐用户<i style="cursor:pointer" class='button button-small button-rounded button-flat action-button pull-right'
+                       ng-click="save()">关注</i></legend>
+        <div ng-if="recommendUsers.length > 0" style="padding-left: 10px" class="row">
+            <div ng-repeat="recommendUser in recommendUsers" class="col-md-1 col-xs-3" ng-click="toogleFollow()">
+                <div>
                     <div class="user {{recommendUser.class}}">
                         <a href="#" onclick="return false;">
-                            <img style="width: 80px;height: 80px" ng-src="{{recommendUser.profile.avatorUrl}}">
+                            <img class="img-responsive" ng-src="{{recommendUser.profile.avatorUrl}}">
                         </a>
                     </div>
                     </a>
@@ -67,8 +68,6 @@
                     </div>
                 </div>
             </div>
-            <i style="cursor:pointer" class='button button-small button-rounded button-flat action-button pull-right'
-               ng-click="save()">保存</i>
         </div>
     </div>
     <div ng-if="recommendUsers.length == 0">
