--- a/app/partials/notFound.html
+++ b/app/partials/notFound.html
@@ -1,9 +1,9 @@
 <ng-include src="'partials/header.html'"></ng-include>
 
-<div class="row-fluid">
-     <div class="span2"></div>
-     <div class="span8">
-         <img id="poster_img" ng-src="img/404.jpg">
+<div class="row">
+     <div class="col-md-2"></div>
+     <div class="col-md-8">
+         <img id="poster_img" ng-src="img/404.jpg" class="img-responsive" class="img-responsive" class="img-responsive">
      </div>
-     <div  class="span2"></div>
+     <div  class="col-md-2"></div>
 </div>
