--- a/app/partials/soundDetail.html
+++ b/app/partials/soundDetail.html
@@ -1,9 +1,9 @@
 <ng-include src="'partials/header.html'"></ng-include>
 
-<div role="main" class="container-fluid">
+<div role="main">
 
-<div class="row-fluid">
-<div class="span11">
+<div class="row" style="margin: 0px">
+<div class="col-md-11" style="padding-right: 0px; padding-left: 0px;">
 <!--Body content-->
 <div id="sound_streams">
 
