--- a/app/css/app.css
+++ b/app/css/app.css
@@ -32,20 +32,17 @@
 }
 
 .sound_art{
-  width: 14%;
-  float:left;
-  text-align:center;
+
   vertical-align:middle;
 }
 
 .sound_player {
   height: 100%;
-  width: 86%;
-  float:left;
 }
 
 .sound_player_header {
-    height: 25%
+    height: 25%;
+    width: 100%;
 }
 
 .sound_player_body {
@@ -58,7 +55,7 @@
 
 .sound_player_wave {
     height: 100%;
-    width:100%
+    width:100%;
 }
 
 .sound_cover{
@@ -75,14 +72,13 @@
 
 .sound_player_control{
     padding-top:10px;
-    width:4%;
     float: left;
     text-align:center;
     vertical-align:middle;
 }
 
 icon-step-backward.sound_player_button{
-    position:relative;
+    /*position:relative;*/
     top: 30%;
 }
 
@@ -95,50 +91,6 @@ icon-step-backward.sound_player_button{
     font-family: Interstate, 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Garuda, Verdana, Tahoma, sans-serif;
     font-size: 13px;
 }
-
-/* override nav bar color */
-.navbar-inner {
-    background: rgb(69,72,77); /* Old browsers */
-    background: -moz-linear-gradient(top,  rgba(69,72,77,1) 0%, rgba(0,0,0,1) 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(69,72,77,1)), color-stop(100%,rgba(0,0,0,1))); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top,  rgba(69,72,77,1) 0%,rgba(0,0,0,1) 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top,  rgba(69,72,77,1) 0%,rgba(0,0,0,1) 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top,  rgba(69,72,77,1) 0%,rgba(0,0,0,1) 100%); /* IE10+ */
-    background: linear-gradient(to bottom,  rgba(69,72,77,1) 0%,rgba(0,0,0,1) 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#45484d', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
-}
-
-.navbar-inner, .navbar .btn-navbar {
-    background: rgb(69,72,77); /* Old browsers */
-    background: -moz-linear-gradient(top,  rgba(69,72,77,1) 0%, rgba(0,0,0,1) 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(69,72,77,1)), color-stop(100%,rgba(0,0,0,1))); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top,  rgba(69,72,77,1) 0%,rgba(0,0,0,1) 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top,  rgba(69,72,77,1) 0%,rgba(0,0,0,1) 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top,  rgba(69,72,77,1) 0%,rgba(0,0,0,1) 100%); /* IE10+ */
-    background: linear-gradient(to bottom,  rgba(69,72,77,1) 0%,rgba(0,0,0,1) 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#45484d', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
-}
-
-.navbar .divider-vertical {
-    background-color: rgba(0,0,0,1);
-    border-right: 1px solid rgba(69,72,77,1);
-}
-
-.navbar .nav .active > a, .navbar .nav .active > a:hover {
-    background-color: rgba(0,0,0,1);
-}
-
-.navbar .nav > li > a {
-    color: lightgray;
-}
-
-.navbar-fixed-top .brand {
-    color: gray;color: lightgray;
-}
-
-.navbar .nav > li > a:hover {color:white;}
-
-.navbar .nav .active > a, .navbar .nav .active > a:hover {color:white;}
 
 .sound_item {
     height: 160px;
@@ -159,7 +111,7 @@ icon-step-backward.sound_player_button{
 }
 
 .action-button {
-    margin-left:6px
+    margin-left:4px
 }
 
 .stat_icon {
@@ -248,15 +200,6 @@ input.ng-dirty.ng-valid {
     border: 1px solid green;
 }
 
-.navbar .nav > li > a {
-    color: #999999;
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-}
-
-.navbar .brand {
-    padding: 0px 0px 0px;
-}
-
 .tags {
     margin: 0;
     padding: 0;
@@ -266,7 +209,6 @@ input.ng-dirty.ng-valid {
 }
 
 .tags li, .tags a{
-    float:left;
     height:20px;
     line-height:20px;
     position:relative;
@@ -275,7 +217,7 @@ input.ng-dirty.ng-valid {
 
 .tags a{
     margin-left:20px;
-    padding:0 10px 0 12px;
+    padding:2px 10px 3px 12px;
     background:#9E9E9E;
     color:#fff;
     text-decoration:none;
@@ -407,4 +349,12 @@ input.ng-dirty.ng-valid {
 
 .external-logo svg:hover g path {
     fill:#262626;
+}
+
+.player_even{
+    background-color: #f9f9f9;
+}
+
+.player_odd {
+     background-color: white;
 }
