--- a/app/partials/user/basicProfile.html
+++ b/app/partials/user/basicProfile.html
@@ -1,7 +1,7 @@
-<div class="row-fluid" ng-controller="basicProfileCtrl">
+<div class="row" ng-controller="basicProfileCtrl">
     <legend>基本信息</legend>
 
-    <div class="span4">
+    <div class="col-xs-4  hidden-xs">
         <div class="{{posterUploadMsgClass}}">
             <i ng-show="uplodingPoster"
                class="icon-spinner icon-spin icon-large"></i>{{posterUploadMsg}}
@@ -22,13 +22,13 @@
 
     <form name="the_form" class="form-horizontal">
 
-        <div class="span7">
+        <div class="col-md-7 col-xs-12">
             <div style="padding-bottom: 10px" ng-show="message">
                 <span class="{{messageClass}}">{{message}}</span>
             </div>
             <div>
-                <div class="row-fluid">
-                    <div class="span6">
+                <div class="row">
+                    <div class="col-md-6">
                         <div style="padding-bottom: 10px">
                             <label>ID</label>
 
@@ -40,18 +40,19 @@
                                 </small>
                             </div>
                             <input type="text" name="alias" placeholder="姓" ng-model="user.profile.alias"
+                                   class="form-control"
                                    alias-unique="alias">
                         </div>
                         <div style="padding-bottom: 10px">
                             <label>姓</label>
-                            <input type="text" placeholder="姓" ng-model="user.profile.lastName">
+                            <input type="text" placeholder="姓" ng-model="user.profile.lastName" class="form-control">
                         </div>
                         <div style="padding-bottom: 10px">
                             <label>名</label>
-                            <input type="text" placeholder="名" ng-model="user.profile.firstName">
+                            <input type="text" placeholder="名" ng-model="user.profile.firstName" class="form-control">
                         </div>
                     </div>
-                    <div class="span6">
+                    <div class="col-md-6">
                         <div style="padding-bottom: 10px">
                             <label>性别</label>
 
@@ -70,17 +71,17 @@
                         </div>
                         <div style="padding-bottom: 10px">
                             <label>城市</label>
-                            <input type="text" placeholder="城市" ng-model="user.profile.city">
+                            <input type="text" placeholder="城市" ng-model="user.profile.city" class="form-control">
                         </div>
                         <div style="padding-bottom: 10px">
                             <label>国家</label>
-                            <input type="text" placeholder="国家" ng-model="user.profile.country">
+                            <input type="text" placeholder="国家" ng-model="user.profile.country" class="form-control">
                         </div>
                     </div>
                 </div>
                 <div>
                     <label>个人描述</label>
-                    <textarea class="input-block-level" ng-model="user.profile.description"
+                    <textarea class="form-control" ng-model="user.profile.description"
                               placeholder="介绍你自己..."></textarea>
                 </div>
             </div>
@@ -90,31 +91,42 @@
                 <ul style="list-style-type: none;padding-left: 4%">
                     <li data-ng-repeat="color in colors"
                         style="width: 55px;height:20px;list-style-type: none;display: table-cell;padding-right:15px">
-                        <label ng-click="chooiceColor()">
-              <span style="background-color: {{color.upper}} !important;height: 25px;display: block">
-              </span>
-              <span style="background-color: {{color.lower}} !important;height: 25px;display: block">
-              </span>
-                        </label>
+                        <span  ng-click="chooiceColor()" >
+                            <span ng-show="color.upper != 'random'">
+                                  <span style="background-color: {{color.upper}} !important;height: 25px;display: block">
+                                  </span>
+                                  <span style="background-color: {{color.lower}} !important;height: 25px;display: block">
+                                  </span>
+                            </span>
+                            <span ng-show="color.upper == 'random'">
+                                <i class="icon-question icon-5x"></i>
+                            </span>
+                        </span>
                     </li>
                 </ul>
-                <div class="span12">
-                    <span style="background-color: {{user.profile.color.upper}} !important;height: 10px;display: block">
+                <div class="col-md-12">
+                    <span ng-show="user.profile.color.upper != 'random'">
+                        <span style="background-color: {{user.profile.color.upper}} !important;height: 10px;display: block">
+                        </span>
+                        <span style="background-color: {{user.profile.color.lower}} !important;height: 10px;display: block">
+                        </span>
                     </span>
-                    <span style="background-color: {{user.profile.color.lower}} !important;height: 10px;display: block">
+                    <span ng-show="user.profile.color.upper == 'random'">
+                           <i class="icon-question icon-2x"></i>
                     </span>
                 </div>
+            </div>
 
+            <div class="pull-right" style="padding-top: 15px">
+                <button id="save_button" href="#"
+                        class="btn btn-default form-control"
+                        ng-disabled="the_form.$invalid"
+                        onclick="return false;" ng-click="saveProfile()">
+                    <span>保存信息</span>
+                </button>
             </div>
         </div>
-        <div class="pull-right" style="padding-top: 15px">
-            <button id="save_button" href="#"
-                    class="button button-small button-rounded button-flat-action action-button"
-                    ng-disabled="the_form.$invalid"
-                    onclick="return false;" ng-click="saveProfile()">
-                <span>保存信息</span>
-            </button>
-        </div>
+
 
     </form>
 </div>
