--- a/app/partials/user/changePass.html
+++ b/app/partials/user/changePass.html
@@ -2,15 +2,15 @@
     <legend>密码管理</legend>
     <div>
         <form name="the_form" class="form-horizontal">
-            <div class="control-group">
-                <div class="controls">
+            <div class="form-group">
+                <div class="controls" style="margin-left: 100px">
                     <h5 ng-class="messageClass">{{message}}</h5>
                 </div>
             </div>
-            <div class="control-group">
+            <div class="form-group">
                 <div class="controls" style="margin-left: 100px">
                     为了您的账号安全，我们将发送重置密码链接邮件到您的注册邮箱，请
-                    <button type="submit" class="btn" ng-click="changePass()">提交</button>
+                    <button type="submit" class="btn btn-default" ng-click="changePass()">提交</button>
                     重置请求。
                 </div>
             </div>
