--- a/app/partials/user/nav.html
+++ b/app/partials/user/nav.html
@@ -1,21 +1,21 @@
 <div class="affix" style="font-size: 15px">
-    <ul class="nav nav-tabs nav-stacked">
+    <ul class="nav nav-pills nav-stacked">
         <li>
         <a href="#" onclick="return false;" ng-click="jumpTo('basicProfile')"  style="width: 100%">
-            基本信息  <i class="icon-chevron-right pull-right" style="font-size:12px ;color: gray;padding-top: 6px"></i>
+            基本信息</i>
 
         </a>
         </li>
 
         <li>
         <a href="#" onclick="return false;" ng-click="jumpTo('externalProfile')" style="width: 100%">
-            外站信息 <i class="icon-chevron-right pull-right" style="font-size:12px ;color: gray;padding-top: 6px"></i>
+            外站信息</i>
         </a>
         </li>
 
         <li>
         <a href="#" onclick="return false;" ng-click="jumpTo('changePass')" style="width: 100%">
-            密码管理    <i class="icon-chevron-right pull-right" style="font-size:12px ;color: gray;padding-top: 6px"></i>
+            密码管理</i>
         </a>
         </li>
     </ul>
