--- a/app/partials/userProfile.html
+++ b/app/partials/userProfile.html
@@ -1,12 +1,12 @@
 <ng-include src="'partials/header.html'"></ng-include>
 
-<div class="container" style="padding-top:65px">
-    <div class="row-fluid">
-        <div class="span2">
+<div class="container" style="padding-top:15px">
+    <div class="row">
+        <div class="col-md-2 hidden-xs">
             <ng-include src="'partials/user/nav.html'"></ng-include>
         </div>
 
-        <div class="span9">
+        <div class="col-md-9 col-xs-12">
             <ng-include src="innerPage"></ng-include>
         </div>
 
